	PR middle-end/67335 	* omp-simd-clone.c (simd_clone_adjust_argument_types): Use NULL prefix 	for tmp simd array if DECL_NAME (parm) is NULL.

* g++.dg/vect/simd-clone-7.cc: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@242678 138bc75d-0d04-0410-961f-82ee72b054a4